[gd_scene load_steps=10 format=3 uid="uid://ckfi0o4121eb2"]

[ext_resource type="FontFile" uid="uid://bw7qaf2752k0r" path="res://assets/fonts/Kaph-Regular.ttf" id="1_t022g"]
[ext_resource type="Script" path="res://game/objects/sore_multiplayer.gd" id="1_wm1jo"]
[ext_resource type="AudioStream" uid="uid://beds3nv155oqf" path="res://assets/sfx/PowerUp/Retro PowerUP 09.wav" id="3_dj6cg"]

[sub_resource type="LabelSettings" id="LabelSettings_g0gru"]
font = ExtResource("1_t022g")
font_size = 30
shadow_size = 6
shadow_color = Color(0.152941, 0.152941, 0.152941, 0.301961)
shadow_offset = Vector2(3, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uyxri"]
size = Vector2(61, 36)

[sub_resource type="Animation" id="Animation_t62rx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RichTextLabel:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(71, 39)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RichTextLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jfey6"]
resource_name = "Sqeez"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.0, 0.261799, 0.0]
}

[sub_resource type="Animation" id="Animation_qtsmf"]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1.2, 1.2), Vector2(1.3, 1.3), Vector2(1.4, 1.4), Vector2(1.5, 1.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RichTextLabel:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(71, 39)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RichTextLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SFX")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.042,
"stream": ExtResource("3_dj6cg")
}],
"times": PackedFloat32Array(0)
}
tracks/4/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t0wpj"]
_data = {
"RESET": SubResource("Animation_t62rx"),
"Sqeez": SubResource("Animation_jfey6"),
"explode": SubResource("Animation_qtsmf")
}

[node name="SoreMultiplayer" type="Node2D"]
script = ExtResource("1_wm1jo")

[node name="RichTextLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -19.5
offset_right = 46.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(35, 19)
theme_override_colors/font_shadow_color = Color(0.180392, 0.180392, 0.180392, 0.603922)
theme_override_constants/shadow_offset_x = 9
theme_override_constants/shadow_offset_y = 5
text = "x2"
label_settings = SubResource("LabelSettings_g0gru")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8.5, -1)
shape = SubResource("RectangleShape2D_uyxri")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Sqeez"
libraries = {
"": SubResource("AnimationLibrary_t0wpj")
}

[node name="SFX" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
